--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "tmg-cobrand",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.15.5",
-    "morgan": "~1.9.0",
-    "node-jt400": "^1.5.7",
-    "node-schedule": "^1.3.0",
-    "request": "^2.85.0",
-    "serve-favicon": "~2.4.5"
-  }
+    "name": "tmg-cobrand",
+    "version": "0.0.0",
+    "private": true,
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.18.2",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.9",
+        "ejs": "~2.5.7",
+        "express": "~4.15.5",
+        "morgan": "~1.9.0",
+        "node-jt400": "^1.5.7",
+        "node-schedule": "^1.3.0",
+        "request": "^2.85.0",
+        "serve-favicon": "~2.4.5"
+    }
 }
