--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
     "private": true,
     "main": "index.js",
     "scripts": {
-        "start": "node ./bin/www"
+        "start:bin": "node ./bin/www",
+        "start": "node .",
+        "lint": "eslint ."
     },
     "dependencies": {
+        "app-root-path": "^2.0.1",
         "body-parser": "~1.18.2",
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "ejs": "~2.5.7",
+        "es6-promisify": "^6.0.0",
         "express": "~4.15.5",
+        "koa": "^2.5.1",
         "morgan": "~1.9.0",
         "node-jt400": "^1.5.7",
         "node-schedule": "^1.3.0",
         "request": "^2.85.0",
-        "serve-favicon": "~2.4.5"
+        "serve-favicon": "~2.4.5",
+        "winston": "^2.4.2"
     }
 }
