--- a/package.json
+++ b/package.json
@@ -23,5 +23,26 @@
         "request": "^2.85.0",
         "serve-favicon": "~2.4.5",
         "winston": "^2.4.2"
-    }
+    },
+    "devDependencies": {
+      "chai": "^4.1.2",
+      "chai-as-promised": "^7.1.1",
+      "coveralls": "^3.0.1",
+      "eslint": "^3.17.1",
+      "eslint-config-loopback": "^8.0.0",
+      "mocha": "^5.2.0",
+      "mocha-lcov-reporter": "^1.3.0",
+      "nsp": "^2.1.0",
+      "nyc": "^12.0.2",
+      "request": "^2.87.0",
+      "sinon": "^5.1.1",
+      "supertest": "^3.1.0",
+      "wd": "^1.9.0"
+    },
+    "repository": {
+      "type": "",
+      "url": ""
+    },
+    "license": "UNLICENSED",
+    "description": "devops-multiprocess"
 }
