--- a/package.json
+++ b/package.json
@@ -1,48 +1,61 @@
 {
-    "name": "tmg-cobrand",
-    "version": "0.0.0",
-    "private": true,
-    "main": "index.js",
-    "scripts": {
-        "start:bin": "node ./bin/www",
-        "start": "node .",
-        "lint": "eslint ."
-    },
-    "dependencies": {
-        "app-root-path": "^2.0.1",
-        "body-parser": "~1.18.2",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.6.9",
-        "ejs": "~2.5.7",
-        "es6-promisify": "^6.0.0",
-        "express": "~4.15.5",
-        "koa": "^2.5.1",
-        "morgan": "~1.9.0",
-        "node-jt400": "^1.5.7",
-        "node-schedule": "^1.3.0",
-        "request": "^2.85.0",
-        "serve-favicon": "~2.4.5",
-        "winston": "^2.4.2"
-    },
-    "devDependencies": {
-      "chai": "^4.1.2",
-      "chai-as-promised": "^7.1.1",
-      "coveralls": "^3.0.1",
-      "eslint": "^3.17.1",
-      "eslint-config-loopback": "^8.0.0",
-      "mocha": "^5.2.0",
-      "mocha-lcov-reporter": "^1.3.0",
-      "nsp": "^2.1.0",
-      "nyc": "^12.0.2",
-      "request": "^2.87.0",
-      "sinon": "^5.1.1",
-      "supertest": "^3.1.0",
-      "wd": "^1.9.0"
-    },
-    "repository": {
-      "type": "",
-      "url": ""
-    },
-    "license": "UNLICENSED",
-    "description": "devops-multiprocess"
+  "name": "tmg-cobrand",
+  "version": "0.0.0",
+  "private": true,
+  "main": "index.js",
+
+  "scripts": {
+    "start": "node .",
+    "cobrand:inquiry_by_partner": "PORT=8080 PROCESS_TYPE=cobrand-inquiry node ./bin/www",
+    "cobrand:inquiry_by_id": "PORT=8081 PROCESS_TYPE=cobrand-inquiry node ./bin/www",
+    "cobrand:inquiry_by_passport": "PROCESS_TYPE=cobrand-inquiry node ./bin/www",
+    "cobrand:redeem_dp": "PROCESS_TYPE=cobrand-inquiry node ./bin/www",
+    "cobrand:redeem_mi": "PROCESS_TYPE=cobrand-inquiry node ./bin/www",    
+    "lint": "eslint .",
+    "posttest": "npm run lint && nsp check"
+  },
+  "dependencies": {
+    "app-root-path": "^2.0.1",
+    "body-parser": "~1.18.2",
+    "compression": "^1.7.2",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.5.2",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "es6-promisify": "^6.0.0",
+    "express": "~4.15.5",
+    "helmet": "^3.10.0",
+    "koa": "^2.5.1",
+    "loopback": "^3.19.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^6.0.0",
+    "morgan": "~1.9.0",
+    "node-jt400": "^1.5.7",
+    "node-schedule": "^1.3.0",
+    "request": "^2.85.0",
+    "serve-favicon": "~2.4.5",
+    "strong-error-handler": "^2.0.0",
+    "winston": "^2.4.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.1",
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nsp": "^2.1.0",
+    "nyc": "^12.0.2",
+    "request": "^2.87.0",
+    "sinon": "^5.1.1",
+    "supertest": "^3.1.0",
+    "wd": "^1.9.0"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "license": "UNLICENSED",
+  "description": "devops-multiprocess"
 }
